--- a/apps.json
+++ b/apps.json
@@ -623,5 +623,18 @@
       {"name":"-blobclk","url":"clock-blob.js"},
       {"name":"*blobclk","url":"clock-blob-icon.js","evaluate":true}
     ]
-  }
+},
+{ "id": "bitclck",
+  "name": "Bit Clock",
+  "icon": "app.png",
+  "version":"0.01",
+  "description": "Bit Clock tries to mimic functions of a fitness watch by providing clock, GPS, heart rate monitoring all bundled into a single app",
+  "tags": "clock",
+  "storage": [
+    {"name":"+bitclck","url":"bit-clock.json"},
+    {"name":"-bitclck","url":"bit-clock.js"},
+    {"name":"*bitclck","url":"bot-clock-icon.js","evaluate":true}
+  ]
+}
+
 ]
