Fix typo for bit-clock-icon.js

--- a/apps.json
+++ b/apps.json
@@ -633,7 +633,7 @@
   "storage": [
     {"name":"+bitclck","url":"bit-clock.json"},
     {"name":"-bitclck","url":"bit-clock.js"},
-    {"name":"*bitclck","url":"bot-clock-icon.js","evaluate":true}
+    {"name":"*bitclck","url":"bit-clock-icon.js","evaluate":true}
   ]
 }
 
