--- a/apps.json
+++ b/apps.json
@@ -1320,19 +1320,23 @@
   "id": "fitclck",
   "name": "Fit Clock",
   "icon": "app.png",
-  "version": "0.47",
-  "description": "Fit Clock tries to mimic functions of a fitness watch by providing clock, GPS, heart rate monitoring all bundled into a single app",
+  "version": "0.48",
+  "description": "Fit Clock is a fitness app that uses the Morph clock as watch face and logs GPS, heart rate and accelerometer readings",
   "tags": "clock",
   "type": "clock",
   "storage": [
    {
-    "name": "fitclck.app.js",
-    "url": "app.js"
+    "name": "fitclock.app.js",
+    "url": "fitclock.js"
    },
    {
     "name": "fitclck.img",
-    "url": "app-icon.js",
+    "url": "fitclock-icon.js",
     "evaluate": true
+   },
+   {
+    "name": "settings.json",
+    "url": "fitclock-settings.json"
    }
   ]
  }
