--- a/defaultapps.json
+++ b/defaultapps.json
@@ -1,1 +1,1 @@
-["boot","launch","mclock","setting","about","alarm","widbat","widbt","welcome"]
+["boot","launch","ftclck","setting","about","widbat","widbt"]
